--- a/HoneyShop/app/src/main/res/layout/activity_add_item2_invoice.xml
+++ b/HoneyShop/app/src/main/res/layout/activity_add_item2_invoice.xml
@@ -78,18 +78,11 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical"
-        android:text="Cancel"
-        android:onClick="cancelPage"/>
+
 
     <Button
         android:id="@+id/btn_a_i_2_invoice"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_vertical"
