--- a/HoneyShop/app/src/main/res/layout/activity_main.xml
+++ b/HoneyShop/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="40dp"
+    android:layout_marginTop="10dp"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/addItem"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="Add Item To List"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/clearInvoice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginTop="50dp"
-        android:text="clear"
-        android:onClick="clearAll"
-        app:layout_constraintBaseline_toBaselineOf="@id/total_price_label"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/total_price_label"
