--- a/HoneyShop/app/src/main/res/layout/invoice_item_row.xml
+++ b/HoneyShop/app/src/main/res/layout/invoice_item_row.xml
@@ -14,9 +14,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_blue_light"
-        android:columnCount="3"
+        android:columnCount="4"
         android:padding="10dp">
 
+        <TextView
+            android:id="@+id/remove"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginRight="20dp"
+            android:text="Remove"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="18sp"
+            android:textStyle="bold" />
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
