--- a/HoneyShop/app/src/main/res/layout/item_row.xml
+++ b/HoneyShop/app/src/main/res/layout/item_row.xml
@@ -4,7 +4,7 @@
     android:id="@+id/cardView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_margin="1dp"
     android:orientation="vertical"
     app:cardCornerRadius="15dp"
     app:cardElevation="10dp"
@@ -14,9 +14,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/holo_blue_light">
-
+        <TextView
+            android:id="@+id/removeItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Remove"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="18sp"
+            android:textStyle="bold" />
         <ImageView
             android:id="@+id/image"
+            android:layout_below="@id/removeItem"
             android:layout_width="100dp"
             android:layout_height="150dp"
             android:layout_centerHorizontal="true" />
