--- a/HoneyShop/app/src/main/res/layout/activity_add_item2_invoice.xml
+++ b/HoneyShop/app/src/main/res/layout/activity_add_item2_invoice.xml
@@ -84,6 +84,7 @@
         android:id="@+id/btn_a_i_2_invoice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center_vertical"
         android:text="Add Item" />
